--- a/src/app/components/board-admin/board-admin.component.html
+++ b/src/app/components/board-admin/board-admin.component.html
@@ -163,7 +163,7 @@
                 <th>Lastname</th>
                 <th>Email</th>
                 <th>Role</th>
-                <th>Status</th>
+                <th>Action</th>
               </tr>
             </thead>
             <tbody>
