--- a/src/app/components/nav-header/nav-header.component.html
+++ b/src/app/components/nav-header/nav-header.component.html
@@ -23,8 +23,9 @@
     </svg>
      <h1 style="margin-left: 15px;font-size: 47px;font-family: Sofia;">
       <strong>CFU</strong></h1>
+    
   </a>
-
+  <br><h4 style="font-size: 15px;font-family: cursive;margin-left: 120px;margin-top: -55px;">CoinFollowUp</h4>
   <div class="nav-control">
     <div
       [ngClass]="{ 'is-active': hamburgerClass, '': !hamburgerClass }"
