--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -8,9 +8,12 @@
               <div class="auth-form">
                 <div class="text-center mb-3">
                   <a [routerLink]="['/admin/index']"
-                    ><img src="assets/images/logo-full.png" alt=""
+                    ><img src="assets/images/logo-full.png" alt="" style="margin-left: 60px"
                   /></a>
                 </div>
+                <h1 style="margin-left: 170px;font-size: 47px;font-family: Sofia;;margin-top: -40px">
+                  <strong>CFU</strong></h1>
+              <br><h4 style="font-size: 15px;font-family: cursive;margin-left: 170px;margin-top: -40px;">CoinFollowUp</h4>
                 <h4 class="text-center mb-4">Sign up your account</h4>
                 <form class="form-valide" action="#" method="post" [formGroup]="angForm" novalidate>
                   <div class="row no-gutters">
