--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,8 +7,11 @@
             <div class="col-xl-12">
               <div class="auth-form">
                 <div class="text-center mb-3">
-                  <img src="assets/images/logo-full.png" alt="" />
+                  <img src="assets/images/logo-full.png" alt="" style="margin-left: 60px"/>
                 </div>
+                <h1 style="margin-left: 170px;font-size: 47px;font-family: Sofia;;margin-top: -40px">
+                  <strong>CFU</strong></h1>
+              <br><h4 style="font-size: 15px;font-family: cursive;margin-left: 170px;margin-top: -40px;">CoinFollowUp</h4>
                 <h4 class="text-center mb-4">Sign in your account</h4>
                 <form
                 class="form-valide" action="#" method="post" [formGroup]="angForm" novalidate
