--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -40580,7 +40580,7 @@ table.dataTable.row-border tbody th, table.dataTable.row-border tbody td, table.
 
 .swiper-box {
   position: relative;
-  height: 920px; }
+  height: 470px; }
   .swiper-box .swiper-container {
     width: 100%;
     height: 100%; }
@@ -40608,10 +40608,7 @@ table.dataTable.row-border tbody th, table.dataTable.row-border tbody td, table.
     position: absolute;
     left: 0;
     bottom: 0;
-    background: -moz-linear-gradient(top, rgba(30, 87, 153, 0) 0%, rgba(166, 188, 213, 0) 33%, rgba(249, 249, 249, 0.43) 53%, #f9f9f9 79%);
-    background: -webkit-linear-gradient(top, rgba(30, 87, 153, 0) 0%, rgba(166, 188, 213, 0) 33%, rgba(249, 249, 249, 0.43) 53%, #f9f9f9 79%);
-    background: linear-gradient(to bottom, rgba(30, 87, 153, 0) 0%, rgba(166, 188, 213, 0) 33%, rgba(249, 249, 249, 0.43) 53%, #f9f9f9 79%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#001e5799', endColorstr='#f9f9f9',GradientType=0 ); }
+  }
   @media only screen and (max-width: 1600px) {
     .swiper-box {
       height: 1100px; } }
