--- a/src/app/components/buy-order/buy-order.component.html
+++ b/src/app/components/buy-order/buy-order.component.html
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="card-header border-0 pb-0">
-        <h4 class="mb-0 text-black fs-20">Buy Order</h4>
+        <h4 class="mb-0 text-black fs-20">Purchase Transactions</h4>
         <div class="dropdown custom-dropdown mb-0 tbl-orders-style dropdown-no-icon" ngbDropdown>
             <div class="btn sharp tp-btn" data-toggle="dropdown" ngbDropdownToggle>
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -16,72 +16,25 @@
         </div>
     </div>
     <div class="card-body p-3 pb-0">
-        <div class="dropdown custom-dropdown d-block tbl-orders dropdown-no-icon" ngbDropdown>
-            <div class="btn  d-flex align-items-center order-bg border-0 rounded" data-toggle="dropdown" ngbDropdownToggle>
-                <svg width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M23.4169 0.00384778C10.7089 -0.226162 0.233857 9.88467 0.00384778 22.5831C-0.226162 35.2816 9.88467 45.7662 22.5831 45.9962C35.2816 46.2262 45.7662 36.1153 45.9962 23.4073C46.2262 10.7089 36.1153 0.224274 23.4169 0.00384778ZM22.6598 41.6835C12.3573 41.4918 4.12485 32.9623 4.31653 22.6598C4.49862 12.3573 13.0281 4.12485 23.3306 4.30694C33.6427 4.49862 41.8656 13.0281 41.6835 23.3306C41.5014 33.6332 32.9623 41.8656 22.6598 41.6835Z" fill="#FF782C"/>
-                    <path d="M23.3019 6.22369C14.0536 6.06076 6.3962 13.4498 6.23327 22.6981C6.17864 25.6077 6.8773 28.3592 8.14427 30.7705H13.4163V14.2616C13.4163 13.2524 14.7877 12.9313 15.2334 13.837L23 29.5649L30.7667 13.838C31.2123 12.9313 32.5837 13.2524 32.5837 14.2616V30.7705H37.8395C39.0182 28.5298 39.7198 25.9997 39.7667 23.3019C39.9297 14.0536 32.5502 6.3962 23.3019 6.22369Z" fill="#FF782C"/>
-                    <path d="M30.667 31.7289V18.3672L23.8587 32.1534C23.5367 32.808 22.4624 32.808 22.1403 32.1534L15.333 18.3672V31.7289C15.333 32.2579 14.9046 32.6872 14.3746 32.6872H9.34223C12.3237 36.8763 17.1712 39.6632 22.6981 39.7667C28.4455 39.8683 33.5747 37.0507 36.6769 32.6872H31.6254C31.0954 32.6872 30.667 32.2579 30.667 31.7289Z" fill="#FF782C"/>
-                </svg>
-                <div class="text-left ml-3">
-                    <span class="d-block fs-16 text-black">Monero</span>
-                </div>
-                <i class="fa fa-angle-down scale5 ml-auto"></i>
-            </div>
-            <div class="dropdown-menu dropdown-menu-right" ngbDropdownMenu>
-                <a class="dropdown-item" href="javascript:void(0);">Dash coin</a>
-                <a class="dropdown-item" href="javascript:void(0);">ETH coin</a>
-            </div>
-        </div>
-        <div class="table-responsive">
+        <mat-form-field   style="margin-left: 70px;" class="dashboard-select">
+            <mat-select placeholder="Choose Your Coin" >
+              <mat-option (click)="getBuyTransactions(item.id)" value="{{item.name}}" *ngFor="let item of UserCoins"> <img src="{{ item.image }}" class="width20 mr-3" /> {{item.name}}  </mat-option>
+            </mat-select>
+          </mat-form-field>
+        <div class="table-responsive" class="scrollit">
             <table class="table text-center bg-warning-hover tr-rounded order-tbl">
                 <thead>
                     <tr>
                         <th class="text-left">Price</th>
-                        <th class="text-center">Amount</th>
-                        <th class="text-right">Total</th>
+                        <th class="text-center">Quantity</th>
+                        <th class="text-right">Date</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody *ngFor="let item of BuyTransactions">
                     <tr>
-                        <td class="text-left">82.3</td>
-                        <td>0.15</td>
-                        <td class="text-right">$134,12</td>
-                    </tr>
-                    <tr>
-                        <td class="text-left">83.9</td>
-                        <td>0.18</td>
-                        <td class="text-right">$237,31</td>
-                    </tr>
-                    <tr>
-                        <td class="text-left">84.2</td>
-                        <td>0.25</td>
-                        <td class="text-right">$252,58</td>
-                    </tr>
-                    <tr>
-                        <td class="text-left">86.2</td>
-                        <td>0.35</td>
-                        <td class="text-right">$126,26</td>
-                    </tr>
-                    <tr>
-                        <td class="text-left">91.6</td>
-                        <td>0.75</td>
-                        <td class="text-right">$46,92</td>
-                    </tr>
-                    <tr>
-                        <td class="text-left">92.6</td>
-                        <td>0.21</td>
-                        <td class="text-right">$123,27</td>
-                    </tr>
-                    <tr>
-                        <td class="text-left">93.9</td>
-                        <td>0.55</td>
-                        <td class="text-right">$212,56</td>
-                    </tr>
-                    <tr>
-                        <td class="text-left">94.2</td>
-                        <td>0.18</td>
-                        <td class="text-right">$129,26</td>
+                        <td class="text-left">{{item.price}}</td>
+                        <td>{{item.quantity}}</td>
+                        <td class="text-right">{{item.date | date:'short'}}</td>
                     </tr>
                 </tbody>
             </table>
