--- a/src/app/components/sell-order/sell-order.component.html
+++ b/src/app/components/sell-order/sell-order.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header border-0 pb-0">
-    <h4 class="mb-0 fs-20 text-black">Sell Order</h4>
+    <h4 class="mb-0 fs-20 text-black">Sale Transactions</h4>
     <div
       class="dropdown custom-dropdown mb-0 tbl-orders-style dropdown-no-icon"
       ngbDropdown
@@ -45,90 +45,25 @@
     </div>
   </div>
   <div class="card-body p-3 pb-0">
-    <div
-      class="dropdown custom-dropdown d-block tbl-orders dropdown-no-icon"
-      ngbDropdown
-    >
-      <div
-        class="btn d-flex align-items-center border-0 order-bg rounded"
-        data-toggle="dropdown"
-        ngbDropdownToggle
-      >
-        <svg
-          width="46"
-          height="46"
-          viewBox="0 0 46 46"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M23.4169 0.00384777C10.7089 -0.226161 0.233857 9.88466 0.00384777 22.5831C-0.226161 35.2815 9.88466 45.7661 22.5831 45.9961C35.2815 46.2261 45.7661 36.1153 45.9961 23.4073C46.2261 10.7089 36.1153 0.224273 23.4169 0.00384777ZM22.6598 41.6834C12.3573 41.4918 4.12485 32.9622 4.31652 22.6598C4.49861 12.3573 13.0281 4.12485 23.3306 4.30694C33.6427 4.49861 41.8655 13.0281 41.6834 23.3306C41.5013 33.6331 32.9622 41.8655 22.6598 41.6834Z"
-            fill="#374C98"
-          />
-          <path
-            d="M23.3038 6.22751C14.0555 6.06459 6.3981 13.4536 6.23518 22.7019C6.06267 31.9406 13.4517 39.598 22.7 39.7705C31.9483 39.9334 39.6057 32.5444 39.7686 23.3057C39.9315 14.0574 32.5521 6.40002 23.3038 6.22751ZM30.2136 32.7361H14.9564L16.8252 22.3952L14.6593 22.8457V21.0823L17.151 20.5552L18.7707 11.6615H24.8563L23.4763 19.2326L25.6039 18.7822V20.5456L23.1504 21.0535L21.732 28.8738H31.3445L30.2136 32.7361Z"
-            fill="#374C98"
-          />
-        </svg>
-        <div class="text-left ml-3">
-          <span class="d-block fs-16 text-black">Litecoin</span>
-        </div>
-        <i class="fa fa-angle-down scale5 ml-auto"></i>
-      </div>
-      <div class="dropdown-menu dropdown-menu-right" ngbDropdownMenu>
-        <a class="dropdown-item" href="javascript:void(0);">Bitcoin</a>
-        <a class="dropdown-item" href="javascript:void(0);">ETH coin</a>
-      </div>
-    </div>
-    <div class="table-responsive">
+    <mat-form-field   style="margin-left: 70px;" class="dashboard-select">
+      <mat-select placeholder="Choose Your Coin" >
+        <mat-option (click)="getSellTransactions(item.id)" value="{{item.name}}" *ngFor="let item of UserCoins"> <img src="{{ item.image }}" class="width20 mr-3" /> {{item.name}}  </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <div class="table-responsive" class="scrollit">
       <table class="table text-center bg-info-hover tr-rounded order-tbl">
         <thead>
           <tr>
             <th class="text-left">Price</th>
-            <th class="text-center">Amount</th>
-            <th class="text-right">Total</th>
+            <th class="text-center">Quantity</th>
+            <th class="text-right">Date</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody  *ngFor="let item of SellTransactions">
           <tr>
-            <td class="text-left">82.3</td>
-            <td>0.15</td>
-            <td class="text-right">$134,12</td>
-          </tr>
-          <tr>
-            <td class="text-left">83.9</td>
-            <td>0.18</td>
-            <td class="text-right">$237,31</td>
-          </tr>
-          <tr>
-            <td class="text-left">84.2</td>
-            <td>0.25</td>
-            <td class="text-right">$252,58</td>
-          </tr>
-          <tr>
-            <td class="text-left">86.2</td>
-            <td>0.35</td>
-            <td class="text-right">$126,26</td>
-          </tr>
-          <tr>
-            <td class="text-left">91.6</td>
-            <td>0.75</td>
-            <td class="text-right">$46,92</td>
-          </tr>
-          <tr>
-            <td class="text-left">92.6</td>
-            <td>0.21</td>
-            <td class="text-right">$123,27</td>
-          </tr>
-          <tr>
-            <td class="text-left">93.9</td>
-            <td>0.55</td>
-            <td class="text-right">$212,56</td>
-          </tr>
-          <tr>
-            <td class="text-left">94.2</td>
-            <td>0.18</td>
-            <td class="text-right">$129,26</td>
+            <td class="text-left">{{item.price}}</td>
+            <td>{{item.quantity}}</td>
+            <td class="text-right">{{item.date | date:'short'}}</td>
           </tr>
         </tbody>
       </table>
