--- a/src/app/components/buy-order/buy-order.component.html
+++ b/src/app/components/buy-order/buy-order.component.html
@@ -32,7 +32,7 @@
                 </thead>
                 <tbody *ngFor="let item of BuyTransactions">
                     <tr>
-                        <td class="text-left">{{item.price}}</td>
+                        <td class="text-left">{{item.price | currency: currency}}</td>
                         <td>{{item.quantity}}</td>
                         <td class="text-right">{{item.date | date:'short'}}</td>
                     </tr>
