add description to cryptoConverter

--- a/src/app/components/quick-trade/quick-trade.component.html
+++ b/src/app/components/quick-trade/quick-trade.component.html
@@ -5,6 +5,9 @@
       <div class="card-header d-sm-flex d-block pb-0 border-0">
         <div>
           <h4 class="fs-20 text-black">Cryptocurrency Converter</h4>
+          <p class="mb-0 fs-15 text-black">
+            convert cryptocurrency to US dollars
+           </p>
         </div>
         <form>
         <mat-form-field   class="dashboard-select">
