modification in admin dashboard

--- a/src/app/components/update-transaction/update-transaction.component.html
+++ b/src/app/components/update-transaction/update-transaction.component.html
@@ -1,4 +1,4 @@
-<h2 class="card-title">Edit Transaction to My Portfolio</h2>
+<h2 class="card-title">Edit Transaction</h2>
 <mat-tab-group mat-align-tabs="center" [selectedIndex]="selectedIndex">
   <mat-tab label="Buy">
     <ng-template matTabContent>
